[gd_scene load_steps=4 format=2]

[ext_resource path="res://ScoredPopup.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/Kenney Future.ttf"

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = SubResource( 1 )

[node name="ScoredPopup" type="Label"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="DisappearTimer" type="Timer" parent="."]
one_shot = true

[node name="FadeTimer" type="Timer" parent="."]
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="timeout" from="DisappearTimer" to="." method="_on_DisappearTimer_timeout"]
[connection signal="timeout" from="FadeTimer" to="." method="_on_FadeTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
